// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert renders correctly with all directions renders correctly direction column 1`] = `
<DocumentFragment>
  .cache-3dbbha-Card {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-t6i97a-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 24px 0 24px;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-3dbbha-Card e2ipnt4"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e2ipnt0"
        height="120"
      />
      <div
        class="cache-1t7ypwa ehpbis70"
      >
        <div
          class="cache-t6i97a-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
          </div>
          Sample Alert
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with all directions renders correctly direction row 1`] = `
<DocumentFragment>
  .cache-3dbbha-Card {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-gy0d8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-nad4zi-Image {
  object-fit: cover;
  border-radius: 4px 0 0 4px;
}

.cache-100qm8i {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-akpqax-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 0 24px 24px;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-3dbbha-Card e2ipnt4"
  >
    <div
      class="cache-gy0d8m ehpbis70"
    >
      <img
        alt=""
        class="cache-nad4zi-Image e2ipnt0"
        width="220"
      />
      <div
        class="cache-100qm8i ehpbis70"
      >
        <div
          class="cache-akpqax-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
          </div>
          Sample Alert
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with children 1`] = `
<DocumentFragment>
  .cache-3dbbha-Card {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-t6i97a-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 24px 0 24px;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-3dbbha-Card e2ipnt4"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e2ipnt0"
        height="120"
      />
      <div
        class="cache-1t7ypwa ehpbis70"
      >
        <div
          class="cache-t6i97a-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
          </div>
          This is the children of the component
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with empty string title 1`] = `
<DocumentFragment>
  .cache-3dbbha-Card {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-t6i97a-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 24px 0 24px;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-3dbbha-Card e2ipnt4"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e2ipnt0"
        height="120"
      />
      <div
        class="cache-1t7ypwa ehpbis70"
      >
        <div
          class="cache-t6i97a-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with href 1`] = `
<DocumentFragment>
  .cache-1hwl07f-Container-Card-activeStyle {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-1hwl07f-Container-Card-activeStyle:hover {
  border: 1px solid #3b1a61;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  cursor: pointer;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yvgzh5-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 24px 0 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zfivx7-StyledIconStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 24px 24px 24px;
}

.cache-1mfv1tz-IconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.cache-7ie8u6-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<a
    class="cache-1hwl07f-Container-Card-activeStyle e2ipnt5"
    href="https://scaleway.com"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e2ipnt0"
        height="120"
      />
      <div
        class="cache-1t7ypwa ehpbis70"
      >
        <div
          class="cache-1yvgzh5-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
          </div>
        </div>
        <div
          class="cache-zfivx7-StyledIconStack e2ipnt2"
          flex="1"
        >
          <div
            class="cache-1mfv1tz-IconContainer e2ipnt3"
          >
            <svg
              class="cache-7ie8u6-sizeStyles e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Alert renders correctly with href and direction row 1`] = `
<DocumentFragment>
  .cache-1hwl07f-Container-Card-activeStyle {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-1hwl07f-Container-Card-activeStyle:hover {
  border: 1px solid #3b1a61;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  cursor: pointer;
}

.cache-gy0d8m {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-nad4zi-Image {
  object-fit: cover;
  border-radius: 4px 0 0 4px;
}

.cache-100qm8i {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1hwcjqy-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 0 24px 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-z74yrd-StyledIconStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 24px 24px 24px 0;
}

.cache-1mfv1tz-IconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.cache-7ie8u6-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<a
    class="cache-1hwl07f-Container-Card-activeStyle e2ipnt5"
    href="https://scaleway.com"
  >
    <div
      class="cache-gy0d8m ehpbis70"
    >
      <img
        alt=""
        class="cache-nad4zi-Image e2ipnt0"
        width="220"
      />
      <div
        class="cache-100qm8i ehpbis70"
      >
        <div
          class="cache-1hwcjqy-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
          </div>
        </div>
        <div
          class="cache-z74yrd-StyledIconStack e2ipnt2"
          flex="1"
        >
          <div
            class="cache-1mfv1tz-IconContainer e2ipnt3"
          >
            <svg
              class="cache-7ie8u6-sizeStyles e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Alert renders correctly with href and target 1`] = `
<DocumentFragment>
  .cache-1hwl07f-Container-Card-activeStyle {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-1hwl07f-Container-Card-activeStyle:hover {
  border: 1px solid #3b1a61;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  cursor: pointer;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-1yvgzh5-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 24px 0 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-zfivx7-StyledIconStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  padding: 0 24px 24px 24px;
}

.cache-1mfv1tz-IconContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  background: #f9f9fa;
  padding: 8px;
  border-radius: 4px;
}

.cache-7ie8u6-sizeStyles {
  vertical-align: middle;
  fill: #3f4250;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

<a
    class="cache-1hwl07f-Container-Card-activeStyle e2ipnt5"
    href="https://scaleway.com"
    target="_blank"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e2ipnt0"
        height="120"
      />
      <div
        class="cache-1t7ypwa ehpbis70"
      >
        <div
          class="cache-1yvgzh5-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
          </div>
        </div>
        <div
          class="cache-zfivx7-StyledIconStack e2ipnt2"
          flex="1"
        >
          <div
            class="cache-1mfv1tz-IconContainer e2ipnt3"
          >
            <svg
              class="cache-7ie8u6-sizeStyles e1gt4cfo0"
              viewBox="0 0 24 24"
            >
              <path
                d="M14,3V5H17.59L7.76,14.83L9.17,16.24L19,6.41V10H21V3M19,19H5V5H12V3H5C3.89,3 3,3.9 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V12H19V19Z"
              />
            </svg>
          </div>
        </div>
      </div>
    </div>
  </a>
</DocumentFragment>
`;

exports[`Alert renders correctly with image, title, description, subtitle and icon 1`] = `
<DocumentFragment>
  .cache-3dbbha-Card {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-t6i97a-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 24px 0 24px;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-g106tl {
  color: #727683;
  font-size: 12px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-10vknku {
  color: #3f4250;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-3dbbha-Card e2ipnt4"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e2ipnt0"
        height="120"
        src="test-file-stub"
      />
      <div
        class="cache-1t7ypwa ehpbis70"
      >
        <div
          class="cache-t6i97a-SubContainer e2ipnt1"
        >
          test-file-stub
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <small
                class="cache-g106tl e13y3mga0"
              >
                sub title test
              </small>
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
            <p
              class="cache-10vknku e13y3mga0"
            >
              this is a description
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Alert renders correctly with onClick 1`] = `
<DocumentFragment>
  .cache-1hwl07f-Container-Card-activeStyle {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-1hwl07f-Container-Card-activeStyle:hover {
  border: 1px solid #3b1a61;
  box-shadow: 0px 0px 8px 2px #d9dadd66;
  cursor: pointer;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-t6i97a-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 24px 0 24px;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<button
    class="cache-1hwl07f-Container-Card-activeStyle e2ipnt6"
    role="button"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e2ipnt0"
        height="120"
      />
      <div
        class="cache-1t7ypwa ehpbis70"
      >
        <div
          class="cache-t6i97a-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </button>
</DocumentFragment>
`;

exports[`Alert renders correctly with required title 1`] = `
<DocumentFragment>
  .cache-3dbbha-Card {
  display: block;
  text-align: left;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  border: 1px solid #d9dadd;
  border-radius: 4px;
  background: #ffffff;
}

.cache-77g8v1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-8a6yjm-Image {
  object-fit: cover;
  border-radius: 4px 4px 0 0;
}

.cache-1t7ypwa {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-t6i97a-SubContainer {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 24px 24px 0 24px;
  padding: 24px;
}

.cache-16otux {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-tjeurz {
  color: #3f4250;
  font-size: 16px;
  font-family: Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-3dbbha-Card e2ipnt4"
  >
    <div
      class="cache-77g8v1 ehpbis70"
    >
      <img
        alt=""
        class="cache-8a6yjm-Image e2ipnt0"
        height="120"
      />
      <div
        class="cache-1t7ypwa ehpbis70"
      >
        <div
          class="cache-t6i97a-SubContainer e2ipnt1"
        >
          <div
            class="cache-16otux ehpbis70"
          >
            <div
              class="cache-77g8v1 ehpbis70"
            >
              <h3
                class="cache-tjeurz e13y3mga0"
              >
                test
              </h3>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
